--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <script src="https://js.paystack.co/v1/inline.js"></script>
 <script src="app.js"></script>
 <title>TechStrap | Product Catalogue</title></head>
-<body>
+<body onload="notify()">
 	<center><label class="pro">Our Product Catalogue</label></center>
 	<br>
 	<br>
