--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 	</div>
 </center>
 </body>
-<button class="cart-click" onclick="cart()"></button>
+<button class="cart-click" onclick="cart()"><div class="popcount" id="counter">0</div></button>
 <div id="cart">
 	<center>
 		<table id="cart-items">
